<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@color/top"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/back"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:text="@string/tip" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="6dp"
            android:background="@color/back"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                >
                <TextView
                    android:id="@+id/textViewOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:text="@string/top" />
                <TextView
                    android:id="@+id/textViewTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:text="@string/top2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="1dp"

                android:background="@color/white"
                >
                <EditText
                    android:id="@+id/edit"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:background="@null"
                    />
            </LinearLayout>
        </LinearLayout>
        <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="6dp"
            android:background="@color/back"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sex_rg"
                        android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:checked="true"
                        android:text="@string/left" />
                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="60dp"
                        android:background="@color/back"
                        android:orientation="horizontal">
                    </LinearLayout>
                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:textSize="16sp"
                        android:text="@string/right" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="1dp"
                android:paddingTop="16dp"
                android:background="@color/white"
                >
                <TextView
                    android:id="@+id/textViewFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:background="@color/white"
                    />
            </LinearLayout>
        </LinearLayout>
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textAllCaps="false"
                android:background="@drawable/shape"
                android:textSize="16sp"
                android:text="@string/button"
                />
    </LinearLayout>
    <!--  <android.support.design.widget.FloatingActionButton
          android:id="@+id/fab"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom|end"
          android:layout_margin="@dimen/fab_margin"
          app:srcCompat="@android:drawable/ic_dialog_email" />-->
</android.support.design.widget.CoordinatorLayout>